# cpp-simulation

./: .gitignore  CMakeLists.txt  CMakeLists.txt~
include/: agent.h  agent.h.orig  simulation.h  simulation.h.autosave  target.h  visualization.h
models/: SnowTerrain.mtl  plane_file.obj~
src/: agent.cpp  main.cpp  simulation.cpp  target.cpp  terrain.cpp  visualization.cpp
